--- a/contact.html
+++ b/contact.html
@@ -19,15 +19,14 @@
                     <li><a href="contact.html">Contacts</a></li>
                 </ul>
             </div>
-        <main class="wrapper">
-            <div class="home-body">
-                <h2>Welcome to Roohi!</h2>
-                <p>We serve all kinds of Asian and Western Cuisine, please have a look at our <a href="menu.html">menu</a> and decide which one or more of our deliciously made food would you like to eat. We also serve beverages to complement the taste of our food. We hope you enjoy your meal here with us.</p>
+        <main class="contacts-wrapper">
+            <div class="contact-main">
+                <p>Please ontact us for inquiries and feedback, we would like to hear from you. Our friendly staff will respond to you shortly. Please contact us using one of the provided ways below.</p>
             </div>
-            <div class="home-food">
-                <img src="img/biryani.jpg" alt="Photo of Biryani">
-                <img src="img/milk-shakes.jpg" alt="Photo of Milk Shakes">
-                <img src="img/bbq-chicken.jpg" alt="Photo of Chicken">
+            <div class="contacts-options">
+                <a href="tel: +92 323 433 7500">Call: +92 323 433 7500</a>
+                <a href="mailto: roohi@example-mail.com">Email: roohi@example-mail.com</a>
+                <a href="https://www.facebook.com/roohi">Facebook</a>
             </div>
         </main>
             <footer>
