--- a/order.html
+++ b/order.html
@@ -19,17 +19,9 @@
                     <li><a href="contact.html">Contacts</a></li>
                 </ul>
             </div>
-        <main class="wrapper">
-            <div class="home-body">
-                <h2>Welcome to Roohi!</h2>
-                <p>We serve all kinds of Asian and Western Cuisine, please have a look at our <a href="menu.html">menu</a> and decide which one or more of our deliciously made food would you like to eat. We also serve beverages to complement the taste of our food. We hope you enjoy your meal here with us.</p>
-            </div>
-            <div class="home-food">
-                <img src="img/biryani.jpg" alt="Photo of Biryani">
-                <img src="img/milk-shakes.jpg" alt="Photo of Milk Shakes">
-                <img src="img/bbq-chicken.jpg" alt="Photo of Chicken">
-            </div>
-        </main>
+         <main class="order-wrapper">
+             <p>Please select your order here.</p>
+         </main>
             <footer>
                 <p>Website by: Abdul Karim&copy;</p>
             </footer>
